shared-cluster-demos/counter/kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ing
  namespace: demo-counter
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  tls:
    - hosts:
        - counter-demo.dev.cloud.org.gc.ca
  rules:
  - host: counter-demo.dev.cloud.org.gc.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counter-svc
            port:
              number: 80
  ingressClassName: nginx
